--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-body {background-color: #ddb;}
+body {background-color: white;}
 
 #wrapper {
     max-width: 1000px;
